fixed table of content color for dark mode

--- a/sources/sass/sbplus.scss
+++ b/sources/sass/sbplus.scss
@@ -3,13 +3,13 @@
  *
  * @author: Ethan Lin
  * @url: https://github.com/Lin87/storybook-plus
- * @version: 3.6.3
- * Released 10/23/2025
+ * @version: 3.6.4
+ * Released xx/xx/2026
  *
  * @license: GNU GENERAL PUBLIC LICENSE v3
  *
     Storybook Plus is an web application that serves multimedia contents.
-    Copyright (C) 2013-2025 Ethan Lin
+    Copyright (C) 2013-2026 Ethan Lin. Sponsored by Excelsior University.
 
     This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
@@ -2425,6 +2425,10 @@ body {
                     }
 
                     #sbplus_side_content_col {
+
+                        button {
+                            color: #fff;
+                        }
 
                         border-left-color: rgb(73, 80, 87);
 
